# archbot-rs

./: .compose-cd  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config-example.toml  docker-compose.yml
.github/workflows/: build-image.yml  ci.yml
src/: main.rs  slack.rs
