[package]
name = "archbot"
version = "0.3.1"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
async-tls = "0.11.0"
async-tungstenite = "0.14.0"
env_logger = "0.8.4"
futures-util = "0.3.15"
jsonxf = "1.1.1"
log = "0.4.14"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
surf = {version = "2.2.0", default-features = false, features = ["h1-client-rustls"]}
toml = "0.5.8"
tungstenite = "0.13.0"
url = "2.2.2"
