[package]
name = "archbot"
version = "0.3.1"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
vergen = { version = "5.1.16", default-features = false, features = ["build", "git"] }
anyhow = "1.0.44"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
async-tls = "0.11.0"
async-tungstenite = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.17"
jsonxf = "1.1.1"
log = "0.4.14"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.68"
surf = {version = "2.3.2", default-features = false, features = ["h1-client-rustls"]}
toml = "0.5.8"
url = "2.2.2"
